--- a/Counter/Base.lproj/Main.storyboard
+++ b/Counter/Base.lproj/Main.storyboard
@@ -16,10 +16,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="aub-SR-zkF">
-                                <rect key="frame" x="16" y="283" width="361" height="375"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="История изменений:" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aub-SR-zkF">
+                                <rect key="frame" x="16" y="283" width="361" height="367"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -38,7 +37,6 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TcJ-4H-o7g">
                                         <rect key="frame" x="0.0" y="0.0" width="158.66666666666666" height="48"/>
-                                        <color key="tintColor" systemColor="systemRedColor"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" image="plus.circle" catalog="system" title="Добавить" imagePadding="10"/>
                                         <connections>
@@ -65,6 +63,7 @@
                                     <constraint firstAttribute="width" constant="44" id="07h-3x-N30"/>
                                     <constraint firstAttribute="height" constant="44" id="gpO-YG-bvl"/>
                                 </constraints>
+                                <color key="tintColor" systemColor="systemBlueColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="arrow.counterclockwise" catalog="system"/>
                                 <connections>
@@ -77,7 +76,7 @@
                         <constraints>
                             <constraint firstItem="DTA-i1-ZQT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="F4t-m2-Gwc"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="DTA-i1-ZQT" secondAttribute="bottom" constant="80" id="Nkm-ma-UAM"/>
-                            <constraint firstItem="DTA-i1-ZQT" firstAttribute="top" secondItem="aub-SR-zkF" secondAttribute="bottom" constant="32" id="S5h-LQ-PrY"/>
+                            <constraint firstItem="DTA-i1-ZQT" firstAttribute="top" secondItem="aub-SR-zkF" secondAttribute="bottom" constant="40" id="S5h-LQ-PrY"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DTA-i1-ZQT" secondAttribute="trailing" constant="32" id="SRF-wL-ph2"/>
                             <constraint firstItem="aub-SR-zkF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="X1W-NK-GrJ"/>
                             <constraint firstItem="mLb-xP-vi9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="96" id="ahg-s0-4dw"/>
@@ -99,6 +98,7 @@
             <point key="canvasLocation" x="101.5267175572519" y="3.5211267605633805"/>
         </scene>
     </scenes>
+    <color key="tintColor" systemColor="systemRedColor"/>
     <resources>
         <image name="arrow.counterclockwise" catalog="system" width="113" height="128"/>
         <image name="minus.circle" catalog="system" width="128" height="123"/>
